[package]
name = "mlir-translator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
cap-std = "2.0.0"
tempfile = "3.7.1"
tokio = "1.30.0"
wasmer = "4.1.1"
wasmer-wasi = "3.1.1"
wasmer-wasix = "0.11.0"
